# RTTB-cpp

./: .gitignore  CMakeLists.txt  README.md
lib/RTTB/Builder/: Builder.cpp  Builder.hpp  Builder.inl
lib/RTTB/Cast/: Cast.hpp  Cast.inl
lib/RTTB/Decode/: Decode.hpp
lib/RTTB/Dyn/: Dyn.cpp  Dyn.hpp  Dyn.inl
lib/RTTB/type_id/: type_id.hpp  type_id.inl
test/_test/Builder/: build.cpp  build_dyn.cpp  cast.cpp  implicit_build.cpp  implicit_build_dyn.cpp
test/_test/_init/: init.cpp  init.hpp
